# frigate-playbook

./: README.md  cloudflare-setup.yml  inventory.yml  n8n.yml  pi-setup.yml  playbook.yml  test-container.sh
frigate/: config.yml  docker-compose.yml  frigate-deploy.yml
frigate/scripts/: main.py  pyproject.toml
