[project]
name = "frigate-video-export"
version = "0.1.0"
description = "Frigate video export service for S3 uploads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "pytz>=2023.3",
    "tenacity>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
